Fixing layout issues

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ padding: 5px;
 
 .thumbnail {
 width: 200px;
-/*height: 150px;*/
+height: 150px;
 margin-left: auto;
 margin-right: auto;
 }
